# tsukuba2023-src

./: README.md  setup.sh
gps_common/: CHANGELOG.rst  package.xml
gps_common/src/: utm_odometry_node.cpp
multi_map_manager/: .gitignore  CMakeLists.txt  package.xml
multi_map_manager/apps/: map_merger.py  map_trimmer.py
multi_map_manager/scripts/: map_changer
navigation/go_forward_recovery/: CMakeLists.txt  package.xml  recovery_plugin.xml
navigation/go_forward_recovery/include/go_forward_recovery/: go_forward_recovery.h
navigation/go_forward_recovery/src/: go_forward_recovery.cpp
navigation/igvc2023/: CMakeLists.txt  package.xml
navigation/igvc2023/config/: ekf.yaml  elecom_joy.yaml  gps_parameters.yaml  initial_pose_tsukuba_L.yaml  initial_pose_tsukuba_R.yaml  navsatekf.yaml
navigation/igvc2023/config/gps_waypoints/: gps_waypoints.yaml  gps_waypoints_north.yaml  gps_waypoints_south.yaml  qualification_waypoints.yaml
navigation/igvc2023/config/waypoints/nakaniwa/: waypoints_nakaniwa_1109.yaml  waypoints_nakaniwa_inv.yaml  waypoints_nakaniwa_sim.yaml  waypoints_nakaniwa_sim_1-2.yaml  waypoints_nakaniwa_sim_2.yaml  waypoints_nakaniwa_sim_tandem.yaml
navigation/igvc2023/config/waypoints/tsukuba/: waypoints_tsukuba_1_L_old.yaml  waypoints_tsukuba_1_R_old.yaml  waypoints_tsukuba_2.yaml  waypoints_tsukuba_3.yaml  waypoints_tsukuba_5.yaml  waypoints_tsukuba_7.yaml  waypoints_tsukuba_8.yaml  waypoints_tsukuba_9.yaml
navigation/igvc2023/config/waypoints/tsukuba/raw/: waypoints_tsukuba_7.yaml
navigation/igvc2023/launch/: buildmap_from_bag.launch  buildmap_teleop_joy.launch  motor.launch  no_map_navigation.launch  segmentation.launch  sensors.launch  start.launch  start_sim.launch  teleop_joy.launch  waypoint_navigation.launch  waypoint_navigation_multi.launch
navigation/igvc2023/maps/: cpmap.sh  setmap.sh
navigation/igvc2023/maps/nakaniwa/: mymap_nakaniwa_1109.yaml  mymap_nakaniwa_sim_2.yaml
navigation/igvc2023/maps/tsukuba/edited/: mymap_tsukuba_1.pgm  mymap_tsukuba_4.pgm  mymap_tsukuba_5.pgm  mymap_tsukuba_7.yaml
navigation/igvc2023/maps/tsukuba/raw/: mymap_tsukuba_1.pgm  mymap_tsukuba_2.yaml  mymap_tsukuba_3.yaml  mymap_tsukuba_4.yaml  mymap_tsukuba_5.yaml  mymap_tsukuba_6.pgm  mymap_tsukuba_8.pgm
navigation/igvc2023/meshes/: IGVCchassis.dae  front_wheel.dae  right_back_wheel.dae
navigation/igvc2023/models/barricade/: model.config  model.sdf
navigation/igvc2023/models/course_v2/: model.config
navigation/igvc2023/models/course_v2/materials/scripts/: course_v2.material
navigation/igvc2023/models/hoseicourse/: model.config
navigation/igvc2023/models/ramp/: model.sdf
navigation/igvc2023/multimaps/nakaniwa/: map0.yaml  map1.yaml  merged_map.yaml
navigation/igvc2023/multimaps/tmp/tsukuba/: map1.yaml  map2.yaml  map3.yaml  map5.pgm  map5.yaml  map7.pgm  merged_map_1-8.yaml  waypoints0.yaml  waypoints1.yaml  waypoints2.yaml  waypoints3.yaml  waypoints7.yaml
navigation/igvc2023/multimaps/tmp/tsukuba_2/: map0.pgm  waypoints1.yaml  waypoints_tsukuba_2.yaml
navigation/igvc2023/multimaps/tmp/tsukuba_3/: map0.pgm  map1.yaml  map2.pgm  waypoints0.yaml
navigation/igvc2023/multimaps/tmp/tsukuba_4/: waypoints0.yaml  waypoints_tsukuba_4.yaml
navigation/igvc2023/multimaps/tsukuba-distorted/: map0.pgm  map0.yaml  map3.yaml  map4.pgm  map7.yaml  map8.yaml  waypoints_L.yaml
navigation/igvc2023/params/: base_local_planner_params.yaml  emcl_params.yaml  foot_print.yaml  global_costmap_params.yaml  local_costmap_params.yaml  localization_params.yaml  move_base_params.yaml  pointcloud_to_laserscan_params.yaml  recovery_params.yaml  segmentation_params.yaml  teb_local_planner_params.yaml
navigation/igvc2023/rviz_cfg/: record_waypoints.rviz
navigation/igvc2023/scripts/: LED_control.py  disp_lat_long.py  get_waypoints_from_gps.py  gps_goal_setter2.py  local_goal_setter2.py  marker_setter.py  ramp_detect.py  rename.sh
navigation/igvc2023/urdf/: orange.gazebo  orange.xacro
navigation/igvc2023/urdf/sensors/: camera.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro
navigation/igvc2023/world/: course.world  course_v2.world  hoseicourse.world
navigation/move_base/: package.xml
openslam_gmapping/gridfastslam/: gridslamprocessor.cpp
tsukuba2023/: CMakeLists.txt  package.xml
tsukuba2023/config/: ekf.yaml  initial_pose.yaml  navsatekf.yaml
tsukuba2023/launch/: buildmap_from_bag.launch  buildmap_teleop_joy.launch  segmentation.launch  sensors.launch  start.launch  start_sim.launch  teb_waypoint_navigation_multi.launch  tebnav.launch  teleop_joy.launch  waypoint_navigation.launch  waypoint_navigation_multi.launch
tsukuba2023/maps/: 20230923_Middle.yaml  mymap.yaml  mymap1.pgm  mymap1.yaml  mymap2.pgm  mymap3.pgm  mymap3.yaml  mymap_202305170852.pgm  mymap_202311030217.yaml  mymap_202311030243.yaml  tsukuba_map0.yaml  tsukuba_map1.yaml  tsukuba_map1a.yaml  tsukuba_map2.yaml  tsukuba_map3.yaml
tsukuba2023/meshes/: Chassis.dae  GPS.dae  IGVCchassis.dae  chassis.dae  left_back_wheel.dae  velodyne.dae
tsukuba2023/params/: base_global_planner_params.yaml  base_local_planner_params.yaml  dwa_local_planner_params.yaml  foot_print.yaml  global_costmap_params.yaml  gmapping_common_params.yaml  local_costmap_params.yaml  localization_params.yaml  move_base_params.yaml  pointcloud_to_laserscan_params.yaml  recovery_params.yaml  segmentation_params.yaml  (+1 more)
waypoint_navigation/: .gitignore  README.md
waypoint_navigation/waypoint_nav/: CMakeLists.txt  package.xml
waypoint_navigation/waypoint_nav/include/: waypoint_nav.h
waypoint_navigation/waypoint_nav/launch/: waypoint_nav.launch
waypoint_navigation/waypoint_nav/rviz_cfg/: nav.rviz
waypoint_navigation/waypoint_nav/scripts/: tandem_run_manager.py
waypoint_navigation/waypoint_nav/src/: velocity_controller.cpp  waypoint_nav.cpp
waypoint_navigation/waypoint_nav/waypoints_cfg/: waypoints.yaml
zlac8015d_ros/: CMakeLists.txt  README.md  package.xml
zlac8015d_ros/launch/: motor_driver_node.launch
zlac8015d_ros/params/: motor_driver_params.yaml
zlac8015d_ros/scripts/: motor_driver_node.py
(+148 files in other folders)
